@@ -1,4 +1,7 @@
 
+=== (next) ===
+FIXED: LogFace to use internal queue for async log messages
+
 === 1.3.0 (2017-08-11) ===
 FIXED: minor fixes & improvements to unit tests
 CHANGED: to auto-enabled CCM prodMode, if NODE_ENV=production
